classpath wildcards code does not support --class-path

XMLWordPrintable

    • b155
    • Verified

        The code in java.c to expand classpath wildcards does not support --class-path, and should.


            for (i = 0; i < argc; i++) {
                char *arg = argv[i];
                if (arg[0] == '-') {
                    if (arg[1] == 'J')
                        continue;
                    if (IsWildCardEnabled() && arg[1] == 'c'
                        && (JLI_StrCmp(arg, "-cp") == 0 ||
                            JLI_StrCmp(arg, "-classpath") == 0)
                        && i < argc - 1) {
                        *nargv++ = arg;
                        *nargv++ = (char *) JLI_WildcardExpandClasspath(argv[i+1]);
                        i++;
                        continue;
                    }
                }
                *nargv++ = arg;
            }

              Assignee:
              Henry Jen
              Reporter:
              Jonathan Gibbons
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: