8172309: classpath wildcards code does not support --class-path

Reviewed-by: ksrini